--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -1,6 +1,16 @@
 set $mod Mod4
 set $term --no-startup-id i3-sensible-terminal
 
+# class                 border  backgr. text    indicator child_border
+set $bd-color #E5F26E
+client.focused          $bd-color #285577 #ffffff $bd-color $bd-color  
+client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
+client.unfocused        #333333 #222222 #888888 #292d2e   #222222
+client.urgent           #2f343a #900000 #ffffff #900000   #900000
+client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
+
+client.background       #ffffff
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:monospace 10
@@ -220,5 +230,5 @@ bindsym $mod+o [class="Spotify"] scratchpad show
 for_window [class="Spotify"] move scratchpad
 for_window [class="Spotify"] resize set 1200 800
 
-for_window [class="^.*"] border pixel 2
+for_window [class="^.*"] border pixel 3
 gaps inner 4
