--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -36,47 +36,18 @@
   "css.lint.unknownVendorSpecificProperties": "error",
   "css.lint.vendorPrefix": "error",
   "css.lint.zeroUnits": "warning",
-  "diagnostic.checkCurrentLine": true,
+  "diagnostic.checkCurrentLine": false,
   "diagnostic.errorSign": "E",
   "diagnostic.hintSign": "H",
   "diagnostic.infoSign": "I",
   "diagnostic.refreshOnInsertMode": true,
   "diagnostic.refreshAfterSave": true,
   "diagnostic.warningSign": "W",
-  "eslint.autoFixOnSave": true,
-  "eslint.filetypes": [
-    "javascript",
-    "javascriptreact",
-    "typescript",
-    "typescriptreact"
-  ],
   "html.autoClosingTags": true,
   "html.format.endWithNewline": true,
   "html.format.indentInnerHtml": true,
   "html.format.indentHandlebars": true,
   "html.format.wrapAttributes": "auto",
-  "java.referencesCodeLens.enabled": true,
-  "java.signatureHelp.enabled": true,
-  "java.completion.importOrder": [
-    "java",
-    "javax",
-    "com",
-    "org"
-  ],
-  "java.configuration.runtimes": [
-      {
-          "name": "JavaSE 1.8",
-          "path": "/usr/lib/jvm/java-8-openjdk-amd64"
-      }
-  ],
-  "java.codeGeneration.useBlocks": true,
-  "java.codeGeneration.generateComments": true,
-  "java.completion.guessMethodArguments": true,
-  "java.format.settings.profile": "JavaStyle",
-  "java.format.settings.url": "/home/hamza/.config/nvim/formatters/java.xml",
-  "java.maven.downloadSources": true,
-  "prettier.requireConfig": true,
-  "python.autoComplete.addBrackets": true,
   "snippets.ultisnips.directories": [
     "UltiSnips",
     "./UltiSnips"
