--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -217,20 +217,14 @@ bindsym $mod+Shift+minus move scratchpad
 # Show the first scratchpad window
 bindsym $mod+u [instance="__scratchpad"] scratchpad show; [instance="__scratchpad"] move position center
 for_window [instance="__scratchpad"] move scratchpad 
-for_window [instance="__scratchpad"] resize set 1200 800
+for_window [instance="__scratchpad"] resize set 800 1200
 exec --no-startup-id urxvt -name "__scratchpad" -pe tabbed
 
 #file manager
-bindsym $mod+a [instance="vifm"] scratchpad show; [instance="vifm"] move position center
-exec --no-startup-id urxvt -name "vifm" -e vifm
-for_window [instance="vifm"] move scratchpad
-for_window [instance="vifm"] resize set 1200 800
-
-#slack
-bindsym $mod+i [instance="slack"] scratchpad show; [instance="slack"] move position center
-exec --no-startup-id urxvt -name "slack" -e slack
-for_window [instance="slack"] move scratchpad
-for_window [instance="slack"] resize set 1400 1000
+#bindsym $mod+a [instance="vifm"] scratchpad show; [instance="vifm"] move position center
+#exec --no-startup-id urxvt -name "vifm" -e vifm
+#for_window [instance="vifm"] move scratchpad
+#for_window [instance="vifm"] resize set 1200 800
 
 for_window [class="^.*"] border pixel 1
 #gaps inner 4
