--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -65,7 +65,7 @@ font-2 = Lato:style=Regular:size=13
 
 modules-left = i3
 modules-center = date 
-modules-right = stock stockAIR
+modules-right = filesystem
 
 tray-position = right
 tray-padding = 2
@@ -165,7 +165,7 @@ mount-0 = /
 
 ; Seconds to sleep between updates
 ; Default: 30
-interval = 10
+interval = 30
 
 ; Display fixed precision values
 ; Default: false
@@ -185,7 +185,7 @@ format-mounted = <label-mounted>
 ; Available tags:
 ;   <label-unmounted> (default)
 format-unmounted = <label-unmounted>
-
+format-underline = #f90000
 ; Available tokens:
 ;   %mountpoint%
 ;   %type%
@@ -196,9 +196,9 @@ format-unmounted = <label-unmounted>
 ;   %free%
 ;   %used%
 ; Default: %mountpoint% %percentage_free%%
-label-mounted = %mountpoint%: %percentage_free%% of %total%
-label-mounted-background = ${colors.background-alt}
-label-mounted-foreground = #000
+label-mounted = %mountpoint%: %percentage_free%% 
+label-mounted-background = ${colors.background}
+label-mounted-foreground = ${colors.foreground}
 label-mounted-padding = 2
 
 ; Available tokens:
