--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ nvim/.config/nvim/bundle/*
 polybar/.config/polybar/polybar-spotify-controls
 nvim/.config/nvim/undodir/*
 **/*.swp
+vifm/.config/vifm/vifminfo.json
