add conky files

--- a/conky/.config/conky/conky.conf
+++ b/conky/.config/conky/conky.conf
@@ -1,76 +1,104 @@
+--[[
+# Minimalis Conky 1.3
+# Author : archit3x
+# Release date : 4 December 2020
+# Tested on : Archlinux ARM - XFCE Desktop
+# Email : archit3x@archlinux.us
+# Feel free to modity this script ;)
+]]
 conky.config = {
-	use_xft                = true,
-	xftalpha               = 1,
-	update_interval        = 1,
-	total_run_times        = 0,
-
-	background             = true, 
-    out_to_console         = false,
-    out_to_stderr          = false,
-
-	own_window             = true,
-    own_window_class       = 'Conky',
-	own_window_type        = 'override',
-	own_window_argb_visual = true,
+    alignment = 'top_left',
+    xinerama_head = 2,
+    background = true,
+    border_width = 1,
+    cpu_avg_samples = 2,
+    default_color = 'white',
+    default_outline_color = 'white',
+    default_shade_color = 'white',
+    color1 = 'white',
+    double_buffer = true,
+    text_buffer_size = 32768,
+    draw_borders = false,
+    draw_graph_borders = true,
+    draw_outline = false,
+    draw_shades = false,
+    extra_newline = false,
+    font = 'Roboto Mono:size=9',
+    gap_x = 10,
+    gap_y = 50,
+    minimum_height = 250,
+    minimum_width = 400,
+    net_avg_samples = 2,
+    no_buffers = true,
+    out_to_console = false,
+    out_to_stderr = false,
+    out_to_x = true,
+    own_window = false,
+    own_window_class = 'Conky',
     own_window_transparent = true,
-
-	double_buffer          = true,
-
-	minimum_width          = 440,
-	maximum_width          = 440,
-
-	minimum_height         = 1000,
-
-	draw_shades            = false,
-	draw_outline           = false,
-	draw_borders           = false,
-	draw_graph_borders     = true,
-	
-    default_color          = 'D8DEE9',
-    color0                 = 'BF616A',
-    color1                 = 'D08770',
-    color2                 = 'EBCB8B',
-    color3                 = 'A3BE8C',
-    color4                 = 'B48EAD',
-
-	alignment              = 'top_right',
-	gap_x                  = 20,
-	gap_y                  = 80,
-	no_buffers             = true,
-	text_buffer_size       = 2048,
-	uppercase              = false,
-	cpu_avg_samples        = 4,
-	net_avg_samples        = 2,
-	override_utf8_locale   = true,
-
-	font                   = 'DejaVu Sans:style=medium:size=10',
-
-    lua_load = "~/.config/conky/clock.lua",
-    lua_draw_hook_pre = "clock_rings",
-    lua_draw_hook_post = "main"
+    own_window_argb_visual = true,
+    own_window_type = 'desktop',
+    own_window_hints ='undecorated,sticky,skip_taskbar,skip_pager,below',
+    show_graph_range = false,
+    show_graph_scale = false,
+    stippled_borders = 0,
+    update_interval = 10.0,
+    uppercase = false,
+    use_spacer = 'none',
+    use_xft = true,
 }
 
-conky.text = [[
-${color0}${hr}$color
-${font Font Awesome 5 Free:style=Regular:size=16}${font}${goto 36}${voffset -6}${font DejaVu Sans:style=bold:size=16}${time %A, %B %d}${font}
-${voffset 4}${font Font Awesome 5 Free:style=Regular:size=16} ${font}${goto 36}${voffset -7}${font DejaVu Sans:style=bold:size=16}${uid_name 1000}@${nodename}${font}
-${color0}${hr}$color
-${font Font Awesome 5 Free:style=Solid}${font} ${memperc}% ${goto 230} ${font Font Awesome 5 Free:style=Solid}${font} ${cpu 0}%
-${memgraph 60,210 BF616A BF616A} ${goto 230} ${cpugraph 0 60,210 D08770 D08770}
-Top Processes: ${alignr} (${processes} total processes)
-Name          ${goto 120} PID          ${goto 210} CPU%         ${goto 300} MEM%         ${alignr} TIME
-${color0}${hr}$color
-${top name 1} ${goto 120} ${top pid 1} ${goto 210} ${top cpu 1} ${goto 300} ${top mem 1} ${alignr} ${top time 1}
-${top name 2} ${goto 120} ${top pid 2} ${goto 210} ${top cpu 2} ${goto 300} ${top mem 2} ${alignr} ${top time 2}
-${top name 3} ${goto 120} ${top pid 3} ${goto 210} ${top cpu 3} ${goto 300} ${top mem 3} ${alignr} ${top time 3}
-${top name 4} ${goto 120} ${top pid 4} ${goto 210} ${top cpu 4} ${goto 300} ${top mem 4} ${alignr} ${top time 4}
-${top name 5} ${goto 120} ${top pid 5} ${goto 210} ${top cpu 5} ${goto 300} ${top mem 5} ${alignr} ${top time 5}
-${color0}${hr}$color
-${font Font Awesome 5 Free:style=Solid}${font} ${downspeed wlp3s0} ${goto 230} ${font Font Awesome 5 Free:style=Solid}${font} ${upspeed wlp3s0}
-${downspeedgraph wlp3s0 60,200 EBCB8B EBCB8B} ${goto 230} ${upspeedgraph wlp3s0 60,210 A3BE8C A3BE8C}
-${font Font Awesome 5 Free:style=Solid}${font} ${wireless_essid wlp3s0} ${goto 230} ${font Font Awesome 5 Free:style=Solid}${font} ${wireless_freq wlp3s0}  (${wireless_link_qual_perc wlp3s0}%)
-${color0}${hr}$color
-${font Deja Vu:style=bold:size=16} / ${font}     ${goto 48} ${fs_bar 15,180 /}${alignr}${fs_free /} free
-${color0}${hr}$color
 
+conky.text = [[
+${color1}${font ConkySymbols:size=20}t${font} ${voffset -10}GNU/Linux» $hr ${color}
+${color1}${goto 40}OS     : ${color}${execi 86400 cat `ls -atr /etc/*-release | tail -2` | grep "PRETTY_NAME" | cut -d= -f2 |  sed 's/"//g'}
+${color1}${goto 40}Kernel : ${color}$kernel on $machine
+
+${if_match ${battery_percent BAT0} <= 10}\
+	${goto 40}${color1}${blink Battery:} \
+$else \
+	${goto 40}${color1}Battery: \
+$endif\
+${goto 112}${color}${voffset 2}${battery_bar 7,70 BAT0} ${voffset -1}${goto 190}${battery BAT0}${alignr}${battery_time BAT0}
+
+
+${color1}${font ConkySymbols:size=16}f${font} ${voffset -10} System» $hr${color}
+${color1}${goto 40}Core 1 : ${color}${freq_g 1}GHz ${alignr}${cpu cpu0}% ${cpubar cpu0 4,100}
+${color1}${goto 40}Core 2 : ${color}${freq_g 2}GHz ${alignr}${cpu cpu1}% ${cpubar cpu1 4,100}
+
+${color1}${goto 40}Uptime : ${color}$uptime_short ${alignr}${color1}Load  : ${color}${loadavg}
+
+
+${color1}${font ConkySymbols:size=16}J${font} ${voffset -10}Memory» $hr${color}
+${color1}${goto 40}Ram${goto 100}: ${color}$mem / $memmax ${alignr}$memperc% ${membar 4,100}
+${color1}${goto 40}Swap${goto 100}: ${color}$swap / $swapmax $alignr}$swapperc% ${swapbar 4,100}
+
+
+${color1}${font ConkySymbols:size=16}n${font} ${voffset -10} Processes» $hr${color}
+
+${color1}${goto 40}CPU usage ${alignr}Memory Usage${color}
+${color1}${goto 40}${stippled_hr}${color}
+${goto 40}${top name 1} ${color}${goto 180}${top cpu 1}% ${goto 280}${top_mem name 1}${goto 450}${top_mem mem_res 1}
+${goto 40}${top name 2} ${color}${goto 180}${top cpu 2}% ${goto 280}${top_mem name 2}${goto 450}${top_mem mem_res 2}
+${goto 40}${top name 3} ${color}${goto 180}${top cpu 3}% ${goto 280}${top_mem name 3}${goto 450}${top_mem mem_res 3}
+${goto 40}${top name 4} ${color}${goto 180}${top cpu 4}% ${goto 280}${top_mem name 4}${goto 450}${top_mem mem_res 4}
+${goto 40}${top name 5} ${color}${goto 180}${top cpu 5}% ${goto 280}${top_mem name 5}${goto 450}${top_mem mem_res 5}
+
+
+${color1}${font ConkySymbols:size=16}k${font} ${voffset -10} Storage» $hr${color}
+${color1}${goto 40}Root${goto 100}: ${color}${fs_used /} / ${fs_size /} ${alignr}${fs_used_perc /}% ${fs_bar 4,100 /}${goto 40}
+${color1}${goto 40}Home${goto 100}: ${color}${fs_used /home} / ${fs_size /home} ${alignr}${fs_used_perc /home}% ${fs_bar 4,100 /home}${goto 40}
+
+
+${color1}${font ConkySymbols:size=16}b${font} ${voffset -10} Eth0» $hr${color}
+${color1}${goto 40}Total Down/Up${goto 180}: ${color}${totaldown enp0s3} / ${totalup enp0s3} 
+${color1}${goto 40}Speed Down/Up${goto 180}: ${color}${downspeed enp0s3} / ${upspeed enp0s3}
+
+
+${color1}${font ConkySymbols:size=16}b${font} ${voffset -10} Kube» $hr${color}
+${color1}${goto 40}${voffset +10}${execpi 30 $HOME/.config/conky/kube.sh}
+
+
+${color1}${font ConkySymbols:size=16}b${font} ${voffset -10} Docker» $hr${color}
+${color1}${goto 40}${voffset +10}${execpi 10 $HOME/.config/conky/docker.sh}
 ]]
