--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -17,7 +17,7 @@ font pango:monospace 10
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork -c 000000
+#exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork -c 000000
 
 exec --no-startup-id i3-workscreen
 # NetworkManager is the most popular way to manage wireless networks on Linux,
@@ -234,3 +234,5 @@ for_window [class="Conky"] floating enable
 # cycles focus
 exec_always --no-startup-id $HOME/.config/i3/scripts/i3-cycle-focus.py --history 2
 bindsym $mod1+Tab exec --no-startup-id i3-cycle-focus.py --switch
+
+exec --no-startup-id /usr/bin/conky -c $HOME/.config/conky/conky.conf
