--- a/conky/.config/conky/conky.conf
+++ b/conky/.config/conky/conky.conf
@@ -50,7 +50,8 @@ conky.config = {
 
 
 conky.text = [[
-${color1}${font ConkySymbols:size=20}t${font} ${voffset -10}GNU/Linux» $hr ${color}
+${color1}${font ConkySymbols:size=20}r${font} ${voffset -10} GNU/Linux» $hr ${color}
+
 ${color1}${goto 40}OS     : ${color}${execi 86400 cat `ls -atr /etc/*-release | tail -2` | grep "PRETTY_NAME" | cut -d= -f2 |  sed 's/"//g'}
 ${color1}${goto 40}Kernel : ${color}$kernel on $machine
 
@@ -63,13 +64,15 @@ ${goto 112}${color}${voffset 2}${battery_bar 7,70 BAT0} ${voffset -1}${goto 190}
 
 
 ${color1}${font ConkySymbols:size=16}f${font} ${voffset -10} System» $hr${color}
+
 ${color1}${goto 40}Core 1 : ${color}${freq_g 1}GHz ${alignr}${cpu cpu0}% ${cpubar cpu0 4,100}
 ${color1}${goto 40}Core 2 : ${color}${freq_g 2}GHz ${alignr}${cpu cpu1}% ${cpubar cpu1 4,100}
 
 ${color1}${goto 40}Uptime : ${color}$uptime_short ${alignr}${color1}Load  : ${color}${loadavg}
 
 
-${color1}${font ConkySymbols:size=16}J${font} ${voffset -10}Memory» $hr${color}
+${color1}${font ConkySymbols:size=16}J${font} ${voffset -10} Memory» $hr${color}
+
 ${color1}${goto 40}Ram${goto 100}: ${color}$mem / $memmax ${alignr}$memperc% ${membar 4,100}
 ${color1}${goto 40}Swap${goto 100}: ${color}$swap / $swapmax $alignr}$swapperc% ${swapbar 4,100}
 
@@ -85,20 +88,22 @@ ${goto 40}${top name 4} ${color}${goto 180}${top cpu 4}% ${goto 280}${top_mem na
 ${goto 40}${top name 5} ${color}${goto 180}${top cpu 5}% ${goto 280}${top_mem name 5}${goto 450}${top_mem mem_res 5}
 
 
-${color1}${font ConkySymbols:size=16}k${font} ${voffset -10} Storage» $hr${color}
+${color1}${font ConkySymbols:size=16}k${font} ${voffset -4} Storage» $hr${color}
+
 ${color1}${goto 40}Root${goto 100}: ${color}${fs_used /} / ${fs_size /} ${alignr}${fs_used_perc /}% ${fs_bar 4,100 /}${goto 40}
 ${color1}${goto 40}Home${goto 100}: ${color}${fs_used /home} / ${fs_size /home} ${alignr}${fs_used_perc /home}% ${fs_bar 4,100 /home}${goto 40}
 
 
-${color1}${font ConkySymbols:size=16}b${font} ${voffset -10} Eth0» $hr${color}
+${color1}${font JetBrainsMono Nerd Font:size=18}${exec echo -e '\uf816 '}${font} ${voffset -4} Eth0» $hr${color}
+
 ${color1}${goto 40}Total Down/Up${goto 180}: ${color}${totaldown enp0s3} / ${totalup enp0s3} 
 ${color1}${goto 40}Speed Down/Up${goto 180}: ${color}${downspeed enp0s3} / ${upspeed enp0s3}
 
 
-${color1}${font ConkySymbols:size=16}b${font} ${voffset -10} Kube» $hr${color}
+${color1}${font JetBrainsMono Nerd Font:size=18}${exec echo -e '\ufd31 '}${font} ${voffset -4} Kubernetes» $hr${color}
 ${color1}${goto 40}${voffset +10}${execpi 30 $HOME/.config/conky/kube.sh}
 
 
-${color1}${font ConkySymbols:size=16}b${font} ${voffset -10} Docker» $hr${color}
+${color1}${font JetBrainsMono Nerd Font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Docker» $hr${color}
 ${color1}${goto 40}${voffset +10}${execpi 10 $HOME/.config/conky/docker.sh}
 ]]
