add information about proxy

--- a/conky/.config/conky/conky.conf
+++ b/conky/.config/conky/conky.conf
@@ -96,8 +96,18 @@ ${color1}${goto 40}Home${goto 100}: ${color}${fs_used /home} / ${fs_size /home} 
 
 ${color1}${font JetBrainsMono Nerd Font:size=18}${exec echo -e '\uf816 '}${font} ${voffset -4} Eth0» $hr${color}
 
-${color1}${goto 40}Total Down/Up${goto 180}: ${color}${totaldown enp0s3} / ${totalup enp0s3} 
-${color1}${goto 40}Speed Down/Up${goto 180}: ${color}${downspeed enp0s3} / ${upspeed enp0s3}
+${color1}${goto 40}Total Down/Up${goto 180}: ${color}${totaldown enp0s3} / ${totalup enp0s3}${goto 350}Cntlm${goto 390}: \
+${if_match ${exec systemctl -q is-active cntlm} == 0}\
+    ${color green}active${color white}\
+$else
+    ${color red}not active${color red}\
+$endif
+${color1}${goto 40}Speed Down/Up${goto 180}: ${color}${downspeed enp0s3} / ${upspeed enp0s3}${goto 350}Gost${goto 390}: \
+${if_match ${exec systemctl -q is-active gost} == 0}\
+    ${color green}active${color white}\
+$else
+    ${color red}not active${color red}\
+$endif
 
 
 ${color1}${font JetBrainsMono Nerd Font:size=18}${exec echo -e '\ufd31 '}${font} ${voffset -4} Kubernetes» $hr${color}
