--- a/conky/.config/conky/conky.conf
+++ b/conky/.config/conky/conky.conf
@@ -97,17 +97,17 @@ ${color1}${goto 40}Home${goto 100}: ${color}${fs_used /home} / ${fs_size /home} 
 ${color1}${font JetBrainsMono Nerd Font:size=18}${exec echo -e '\uf816 '}${font} ${voffset -4} Eth0» $hr${color}
 
 ${color1}${goto 40}Total Down/Up${goto 180}: ${color}${totaldown enp0s3} / ${totalup enp0s3}${goto 350}Cntlm${goto 390}: \
-${if_match ${exec systemctl -q is-active cntlm} == 0}\
+${if_match "${exec echo -n `systemctl is-active cntlm`}" == "active"}\
     ${color green}active${color white}\
-$else
+$else\
     ${color red}not active${color red}\
 $endif
 ${color1}${goto 40}Speed Down/Up${goto 180}: ${color}${downspeed enp0s3} / ${upspeed enp0s3}${goto 350}Gost${goto 390}: \
-${if_match ${exec systemctl -q is-active gost} == 0}\
+${if_match "${exec echo -n `systemctl is-active gost`}" == "active"}\
     ${color green}active${color white}\
-$else
+$else\
     ${color red}not active${color red}\
-$endif
+$endif\
 
 
 ${color1}${font JetBrainsMono Nerd Font:size=18}${exec echo -e '\ufd31 '}${font} ${voffset -4} Kubernetes» $hr${color}
