add val namespace

--- a/conky/.config/conky/conky.conf
+++ b/conky/.config/conky/conky.conf
@@ -110,8 +110,12 @@ $else\
 $endif\
 
 
-${color1}${font JetBrainsMono Nerd Font:size=18}${exec echo -e '\ufd31 '}${font} ${voffset -4} Kubernetes» $hr${color}
-${color1}${goto 40}${voffset +10}${execpi 30 $HOME/.config/conky/kube.sh}
+${color1}${font JetBrainsMono Nerd Font:size=18}${exec echo -e '\ufd31 '}${font} ${voffset -4} Kubernetes Integration» $hr${color}
+${color1}${goto 40}${voffset +10}${execpi 30 $HOME/.config/conky/kube.sh "int"}
+
+
+${color1}${font JetBrainsMono Nerd Font:size=18}${exec echo -e '\ufd31 '}${font} ${voffset -4} Kubernetes Validation» $hr${color}
+${color1}${goto 40}${voffset +10}${execpi 30 $HOME/.config/conky/kube.sh "val"}
 
 
 ${color1}${font JetBrainsMono Nerd Font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Docker» $hr${color}
