rearrage conky kube

--- a/conky/.config/conky/conky.conf
+++ b/conky/.config/conky/conky.conf
@@ -109,20 +109,14 @@ $else\
     ${color red}not active${color red}\
 $endif\
 
-${color1}${goto 1500}${voffset -940}${font JetBrainsMono Nerd Font:size=18}${exec echo -e '\ufd31 '}${font} ${voffset -4} Kubernetes Integration» ${color}
-${color1}${goto 1500}${voffset +10}${execpi 30 $HOME/.config/conky/kube.sh "int" 1000}
+${color1}${goto 700}${voffset -940}${font JetBrainsMono Nerd Font:size=18}${exec echo -e '\ufd31 '}${font} ${voffset -4} Kubernetes Integration» ${color}
+${color1}${goto 700}${voffset +10}${execpi 30 $HOME/.config/conky/kube.sh "int" 200}
 
 
-${color1}${goto 1500}${font JetBrainsMono Nerd Font:size=18}${exec echo -e '\ufd31 '}${font} ${voffset -4} Kubernetes Validation» ${color}
-${color1}${goto 240}${voffset +10}${execpi 30 $HOME/.config/conky/kube.sh "val" 1000}
+${color1}${goto 2000}${voffset -761}${font JetBrainsMono Nerd Font:size=18}${exec echo -e '\ufd31 '}${font} ${voffset -4} Kubernetes Validation» ${color}
+${color1}${goto 240}${voffset +10}${execpi 30 $HOME/.config/conky/kube.sh "val" 1500}
 
 
-${color1}${goto 1500}${font JetBrainsMono Nerd Font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Docker» ${color}
-${color1}${goto 40}${voffset +10}${execpi 10 $HOME/.config/conky/docker.sh 1000}
-
-${color1}${goto 10}${voffset -390}${font JetBrainsMono Nerd Font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Meteo» ${color}
-
-${color1}${goto 75}${voffset +5}Toulouse${color}
-${color1}${goto 300}${execpi 120 curl -s wttr.in/Toulouse?1pq | sed -n '3,7{s/\d27\[[0-9;]*m//g;s/^..//;s/ *$//;p}'}
-
+${color1}${goto 700}${font JetBrainsMono Nerd Font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Docker» ${color}
+${color1}${goto 40}${voffset +10}${execpi 10 $HOME/.config/conky/docker.sh 200}
 ]]
