--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -1,5 +1,5 @@
 set $mod Mod4
-set $term --no-startup-id i3-sensible-terminal
+set $term --no-startup-id urxvt
 
 # class                 border  backgr. text    indicator child_border
 set $bd-color #E5F26E
@@ -38,7 +38,7 @@ exec --no-startup-id pulseaudio -D
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec urxvt
 
 # kill focused window
 bindsym $mod+Shift+A kill
