--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -1,457 +1,138 @@
-;==========================================================
-;
-;
-;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
-;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
-;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
-;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
-;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
-;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
-;
-;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/polybar/polybar
-;
-;   The README contains a lot of information
-;
-;==========================================================
+; vim:ft=dosini
 
 [colors]
-;background = ${xrdb:color0:#222}
-background = #222
-background-alt = #444
-;foreground = ${xrdb:color7:#222}
-foreground = #dfdfdf
-foreground-alt = #555
-primary = #ffb52a
-secondary = #e60053
-active-term=#005faf
-alert = #bd2c40
+foreground         = #abb2bf
+foreground-alt     = #666666
+foreground-focused = #282c34
+background         = #88282c34
+background-focused = #abb2bf
+red    = #be5046
+green  = #98c379
+yellow = #d19a66
 
-;------------------------------------
-;
-;           MONITOR LEFT
-;
-;-------------------------------------
-[bar/monitor-left]
-monitor="Virtual2"
-
-width = 100%
-height = 27 
-;offset-x = 1%
-;offset-y = 1%
-radius = 0.0
-fixed-center = false
-
-background = ${colors.background}
-foreground = ${colors.foreground}
-
-line-size = 3
-line-color = #f00
-
-border-size = 2
-border-color = #00000000
-
-padding-left = 0
-padding-right = 2
-
-module-margin-left = 1
-module-margin-right = 2
-
-; Query installed fonts with `fc-list`
-font-0 = JetBrainsMono Nerd Font:style=Regular:size=12
-font-1 = Lato:style=Regular:size=10
-font-2 = Lato:style=Regular:size=13
-
-modules-left = i3
-modules-center = date 
-modules-right = filesystem
-
-tray-position = right
-tray-padding = 2
-;tray-background = #0063ff
-
-;wm-restack = bspwm
-wm-restack = i3
-
-; override-redirect = true
-
-;scroll-up = bspwm-desknext
-;scroll-down = bspwm-deskprev
-
-;scroll-up = i3wm-wsnext
-;scroll-down = i3wm-wsprev
-
-cursor-click = pointer
-cursor-scroll = ns-resize
-
-
-;----------------------------------------
-;
-;       MONITOR RIGHT
-;
-;----------------------------------------
-[bar/monitor-virtual]
-monitor = "Virtual1"
-width = 100%
-height = 27 
-;offset-x = 1%
-;offset-y = 1%
-radius = 0.0
-fixed-center = false
+[bar/topbar]
+monitor = ${env:MONITOR}
 enable-ipc = true
-background = ${colors.background}
+wm-restack = bspwm
+height = 22
 foreground = ${colors.foreground}
-
-line-size = 3
-line-color = #f00
-
-border-size = 2
-border-color = #00000000
-
-padding-left = 0
-padding-right = 2
-
-module-margin-left = 1
-module-margin-right = 2
-
-; Query installed fonts with `fc-list`
-font-0 = JetBrainsMono Nerd Font:style=Regular:size=14  
-font-1 = Lato:style=Regular:size=10
-font-2 = Lato:style=Regular:size=10
-font-3 = "FontAwesome5 Free:style=Regular:pixelsize=8;1"
-font-4 = "FontAwesome 5 FreeSolid:style=Solid:pixelsize=8;1"
-font-5 = "Font Awesome 5 Brands:style=Regular:pixelsize=8;1"
-font-6 = "Font Awesome 5 Brands:style=Solid:pixelsize=8;1"
-
-modules-left = i3 
-modules-center = date
-modules-right = eth temperature memory cpu filesystem
-
-tray-position = right
-tray-padding = 2
-;tray-background = #0063ff
-
-;wm-restack = bspwm
-wm-restack = i3
-
-; override-redirect = true
-
-;scroll-up = bspwm-desknext
-;scroll-down = bspwm-deskprev
-
-scroll-up = i3wm-wsnext
-scroll-down = i3wm-wsprev
-
+background = ${colors.background}
+font-0 = FiraCode Nerd Font:style=Bold:size=10;2
+padding-right = 1
+module-margin = 1
+modules-left   = bspwm
+modules-right  = ethernet wlan cpu temperature memory battery backlight alsa date search
 cursor-click = pointer
-cursor-scroll = ns-resize
+tray-position = right
 
-;----------------------------------------
-;
-;               MODULES
-;
-;----------------------------------------
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:30:...%
+[module/bspwm]
+type = internal/bspwm
+label-focused       = %name%
+label-focused-empty = ·
+label-occupied      = %name%
+label-urgent        = %name%
+label-empty         = ·
+label-focused-padding        = 1
+label-focused-empty-padding  = 1
+label-occupied-padding       = 1
+label-urgent-padding         = 1
+label-empty-padding          = 1
+label-focused-foreground       = ${colors.foreground-focused}
+label-focused-background       = ${colors.background-focused}
+label-focused-empty-foreground = ${colors.foreground-focused}
+label-focused-empty-background = ${colors.background-focused}
+label-urgent-foreground        = ${colors.red}
 
-[module/filesystem]
-type = internal/fs
+[module/ethernet]
+type = internal/network
+interface = ${env:ETHERNET}
+format-connected-prefix    = " "
+label-connected         = %local_ip%
 
-; Mountpoints to display
-mount-0 = /
-; mount-1 = /home
-; mount-2 = /var
-
-; Seconds to sleep between updates
-; Default: 30
-interval = 30
-
-; Display fixed precision values
-; Default: false
-fixed-values = true
-
-; Spacing between entries
-; Default: 2
-spacing = 1
-
-; Available tags:
-;   <label-mounted> (default)
-;   <bar-free>
-;   <bar-used>
-;   <ramp-capacity>
-format-mounted = <label-mounted>
-
-; Available tags:
-;   <label-unmounted> (default)
-format-unmounted = <label-unmounted>
-format-underline = #f90000
-; Available tokens:
-;   %mountpoint%
-;   %type%
-;   %fsname%
-;   %percentage_free%
-;   %percentage_used%
-;   %total%
-;   %free%
-;   %used%
-; Default: %mountpoint% %percentage_free%%
-label-mounted = %mountpoint%: %percentage_free%% 
-label-mounted-background = ${colors.background}
-label-mounted-foreground = ${colors.foreground}
-label-mounted-padding = 0
-
-; Available tokens:
-;   %mountpoint%
-; Default: %mountpoint% is not mounted
-label-unmounted = %mountpoint%: not mounted
-label-unmounted-foreground = #55
-
-[module/i3]
-type = internal/i3
-format = <label-state> <label-mode>
-index-sort = true
-wrapping-scroll = false
-
-; Only show workspaces on the same output as the bar
-pin-workspaces = true
-
-label-mode-padding = 2
-label-mode-foreground = #000
-label-mode-background = ${colors.primary}
-
-; focused = Active workspace on focused monitor
-label-focused = %index%
-label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.active-term}
-label-focused-padding = 2
-
-; unfocused = Inactive workspace on any monitor
-label-unfocused = %index%
-label-unfocused-padding = 2
-
-; visible = Active workspace on unfocused monitor
-label-visible = %index%
-label-visible-padding = ${self.label-focused-padding}
-label-visible-background = ${colors.background-alt}
-label-visible-underline= ${colors.primary}
-
-; urgent = Workspace with urgency hint set
-label-urgent = %index%
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
-
-; Separator in between workspaces
-; label-separator = |
+[module/wlan]
+type = internal/network
+interface = ${env:WLAN}
+format-connected-prefix    = "直 "
+format-disconnected-prefix = "睊 "
+format-disconnected-prefix-foreground = ${colors.red}
+label-connected         = %essid% ( %upspeed%  %downspeed%)
+label-disconnected      = Disconnected
+label-disconnected-foreground = ${colors.red}
 
 [module/cpu]
 type = internal/cpu
-interval = 2
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground}
-format-underline = #f90000
-label = %percentage-cores%
-
-[module/memory]
-type = internal/memory
-interval = 2
-format-prefix = "MEM  "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #4bffdc
-label = %percentage_used%%
+format-prefix = " "
 
 [module/temperature]
 type = internal/temperature
+thermal-zone = ${env:THERMAL}
+format = <ramp> <label>
+format-warn = <ramp> <label-warn>
+label-warn-foreground = ${colors.red}
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-3 = 
+ramp-4 = 
 
-; Seconds to sleep between updates
-; Default: 1
-interval = 0.5
+[module/memory]
+type = internal/memory
+format-prefix = "﬙ "
+label         = %gb_used%
 
-; Thermal zone to use
-; To list all the zone types, run 
-; $ for i in /sys/class/thermal/thermal_zone*; do echo "$i: $(<$i/type)"; done
-; Default: 0
-thermal-zone = 0
+[module/battery]
+type = internal/battery
+battery = BAT0
+adapter = AC
+format-discharging = <ramp-capacity> <label-discharging>
+format-charging    = <animation-charging> <label-charging>
+format-full        = <ramp-capacity> <label-full>
+format-charging-foreground = ${colors.yellow}
+format-full-foreground     = ${colors.green}
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+animation-charging-framerate = 1000
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
 
-; Full path of temperature sysfs path
-; Use `sensors` to find preferred temperature source, then run
-; $ for i in /sys/class/hwmon/hwmon*/temp*_input; do echo "$(<$(dirname $i)/name): $(cat ${i%_*}_label 2>/dev/null || echo $(basename ${i%_*})) $(readlink -f $i)"; done
-; to find path to desired file
-; Default reverts to thermal zone setting
-hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input
-
-; Base temperature for where to start the ramp (in degrees celsius)
-; Default: 0
-base-temperature = 20
-
-; Threshold temperature to display warning label (in degrees celsius)
-; Default: 80
-warn-temperature = 60
-
-[module/eth]
-type = internal/network
-interface = enp0s3 
-interval = 3.0
-
-format-connected-underline = #55aa55
-format-connected-prefix = " "
-format-connected-prefix-foreground = ${colors.foreground}
-label-connected = %local_ip%
-
-format-disconnected =
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
-
-[module/date]
-type = internal/date
-interval = 5
-
-date = "%d-%m-%Y"
-date-alt = " %Y-%m-%d"
-
-time = %H:%M
-time-alt = %H:%M:%S
-
-format-prefix = 
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #0a6cf5
-
-label = %date% %time%
-
-[module/time-ro]
-type = custom/script
-exec = TZ=Europe/Bucharest date +"Ro: %H:%M"
-interval=30
-
-[module/pulseaudio]
-type = internal/pulseaudio
-
-format-volume = <label-volume> <bar-volume>
-label-volume = %percentage%%
-label-volume-foreground = ${colors.foreground-alt}
-
-label-muted = 🔇 muted
-label-muted-foreground = #666
-
-bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
-bar-volume-gradient = false
-bar-volume-indicator = |
-bar-volume-indicator-font = 2
-bar-volume-fill = ─
-bar-volume-fill-font = 2
-bar-volume-empty = ─
-bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
+[module/backlight]
+type = internal/backlight
+card = intel_backlight
+format = <ramp> <label>
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
 
 [module/alsa]
 type = internal/alsa
-
-format-volume = <label-volume> <bar-volume>
-label-volume = ""  
-label-volume-foreground = ${root.foreground}
-
-format-muted-prefix = " "
-format-muted-foreground = ${colors.foreground-alt}
+format-volume = <ramp-volume> <bar-volume>
+format-muted-prefix = "ﱝ "
 label-muted = sound muted
-
-bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
-bar-volume-gradient = false
-bar-volume-indicator = |
-bar-volume-indicator-font = 2
-bar-volume-fill = ─
-bar-volume-fill-font = 2
-bar-volume-empty = ─
-bar-volume-empty-font = 2
+ramp-volume-0 = 奄
+ramp-volume-1 = 奔
+ramp-volume-2 = 墳
+bar-volume-width     = 11
+bar-volume-indicator =
+bar-volume-fill      = -
+bar-volume-empty     = -
 bar-volume-empty-foreground = ${colors.foreground-alt}
 
-[module/previous]
-type = custom/script
-interval = 86400
-format = "%{T3}<label>"
-format-padding = 2
-; Previous song icon
-exec = echo ""
-; Check if spotify is running before displaying the icon
-exec-if = "pgrep spotify"
-format-underline = #1db954
-line-size = 1
-click-left = "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous"
+[module/date]
+type = internal/date
+interval = 1
+label = %time% - %date%
+time     = %R
+date     = %a, %b %d
+time-alt = %T
+date-alt = %A, %B %d, %Y
 
-[module/next]
-type = custom/script
-interval = 86400
-format = "%{T3}<label>"
-format-padding = 2
-; Next song icon
-exec = echo ""
-; Check if spotify is running before displaying the icon
-exec-if = "pgrep spotify"
-format-underline = #1db954
-line-size = 0.5 
-click-left = "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next"
-
-[module/playpause]
-type = custom/ipc
-; Default
-hook-0 = echo ""
-; Playing
-hook-1 = echo ""
-; Playing (pause symbol)
-hook-2 = echo ""
-; Paused (play symbol)
-format-padding = 2
-initial = 1
-format-underline = #1db954
-line-size = 0.5
-click-left = "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause"
-
-[module/monitorMode]
-type = custom/script
-
-format = "<label>"
-format-padding = 2
-
-
-[module/spotify]
-type = custom/ipc
-hook-0 = echo ""
-hook-1 = python3 /home/cosmin/.config/polybar/polybar-spotify-controls/scripts/spotify/spotify_status.py 
-initial = 1
-format-padding = 4
-format-underline = #1db954
-line-size = 1
-; [i3wm only] - Uncomment the below line to focus on Spotify when clicking on the song name (credits to https://github.com/Esya)
-; click-left = i3-msg '[class="Spotify"] focus'
-
-[module/gost]
+[module/search]
 type = custom/text
-content = "view weather"
-click-left = sh ~/.config/polybar/scripts/wttr.sh
-
-[settings]
-screenchange-reload = true
-;compositing-background = xor
-;compositing-background = screen
-;compositing-foreground = source
-;compositing-border = over
-pseudo-transparency = false
-
-[global/wm]
-margin-top = 2
-margin-bottom = 2
+content = ""
+click-left = "dmenu_run"
