--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -14,14 +14,16 @@ yellow = #d19a66
 monitor = ${env:MONITOR}
 enable-ipc = true
 wm-restack = bspwm
-height = 22
+height = 30
 foreground = ${colors.foreground}
 background = ${colors.background}
-font-0 = FiraCode Nerd Font:style=Bold:size=10;2
+font-0 = JetBrainsMono Font:style=Regular:size=14;2
+font-1 = "Iosevka Nerd Font:size=14;3"
 padding-right = 1
-module-margin = 1
+module-margin = 2
 modules-left   = bspwm
-modules-right  = ethernet wlan cpu temperature memory battery backlight alsa date search
+modules-center = date
+modules-right  = ethernet wlan cpu temperature memory battery filesystem search powermenu
 cursor-click = pointer
 tray-position = right
 
@@ -62,6 +64,10 @@ label-disconnected-foreground = ${colors.red}
 [module/cpu]
 type = internal/cpu
 format-prefix = " "
+format-prefix-foreground = ${colors.foreground}
+format-underline = #f90000
+label = %percentage-cores%
+content-font = 3
 
 [module/temperature]
 type = internal/temperature
@@ -136,3 +142,51 @@ date-alt = %A, %B %d, %Y
 type = custom/text
 content = ""
 click-left = "dmenu_run"
+
+[module/filesystem]
+type = internal/fs 
+mount-0 = /
+interval = 30
+fixed-values = true
+format-mounted = <label-mounted>
+label-mounted = %mountpoint%: %percentage_free%% 
+label-mounted-background = ${colors.background}
+label-mounted-foreground = ${colors.foreground}
+label-mounted-padding = 0
+
+[module/powermenu]
+type = custom/menu
+
+; If true, <label-toggle> will be to the left of the menu items (default).
+; If false, it will be on the right of all the items.
+expand-right = true
+
+; "menu-LEVEL-N" has the same properties as "label-NAME" with
+; the additional "exec" property
+;
+; Available exec commands:
+;   menu-open-LEVEL
+;   menu-close
+; Other commands will be executed using "/usr/bin/env sh -c $COMMAND"
+menu-0-0 = " Reboot |"
+menu-0-0-background = ${color.background}
+menu-0-0-exec = menu-open-1
+menu-0-1 = " Shutdown "
+menu-0-1-background = ${color.background}
+menu-0-1-exec = menu-open-2
+
+menu-1-0 = " Back |"
+menu-1-0-background = ${color.background}
+menu-1-0-exec = menu-open-0
+menu-1-1 = " Reboot "
+menu-1-1-background = ${color.background}
+menu-1-1-exec = systemctl reboot
+
+menu-2-0 = " Shutdown |"
+menu-2-0-background = ${color.background}
+menu-2-0-exec = systemctl poweroff
+menu-2-1 = " Back "
+menu-2-1-background = ${color.background}
+menu-2-1-exec = menu-open-0
+label-open = Power 
+label-close = x
