--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -23,7 +23,7 @@ padding-right = 1
 module-margin = 2
 modules-left   = bspwm
 modules-center = date
-modules-right  = ethernet wlan cpu temperature memory battery filesystem search powermenu
+modules-right  = ethernet wlan cpu temperature memory battery pulseaudio filesystem 
 cursor-click = pointer
 tray-position = right
 
@@ -66,7 +66,7 @@ type = internal/cpu
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground}
 format-underline = #f90000
-label = %percentage-cores%
+label = %percentage%%
 content-font = 3
 
 [module/temperature]
@@ -115,8 +115,8 @@ ramp-0 = 
 ramp-1 = 
 ramp-2 = 
 
-[module/alsa]
-type = internal/alsa
+[module/pulseaudio]
+type = internal/pulseaudio
 format-volume = <ramp-volume> <bar-volume>
 format-muted-prefix = "ﱝ "
 label-muted = sound muted
