--- a/conky/.config/conky/conky.conf
+++ b/conky/.config/conky/conky.conf
@@ -1,11 +1,3 @@
---[[
-# Minimalis Conky 1.3
-# Author : archit3x
-# Release date : 4 December 2020
-# Tested on : Archlinux ARM - XFCE Desktop
-# Email : archit3x@archlinux.us
-# Feel free to modity this script ;)
-]]
 conky.config = {
     alignment = 'top_left',
     xinerama_head = 2,
@@ -24,7 +16,7 @@ conky.config = {
     draw_shades = false,
     extra_newline = false,
     font = 'Roboto Mono:size=13',
-    gap_x = 10,
+    gap_x = 50,
     gap_y = 50,
     minimum_height = 250,
     minimum_width = 400,
@@ -96,25 +88,8 @@ ${color1}${goto 40}Home${goto 100}: ${color}${fs_used /home} / ${fs_size /home} 
 
 ${color1}${font JetBrainsMono Nerd Font:size=18}${exec echo -e '\uf816 '}${font} ${voffset -4} Eth0» ${color}
 
-${color1}${goto 40}Total Down/Up${goto 180}: ${color}${totaldown enp0s3} / ${totalup enp0s3}${goto 400}Cntlm${goto 460}: \
-${if_match "${exec echo -n `systemctl is-active cntlm`}" == "active"}\
-    ${color green}active${color white}\
-$else\
-    ${color red}not active${color red}\
-$endif
-${color1}${goto 40}Speed Down/Up${goto 180}: ${color}${downspeed enp0s3} / ${upspeed enp0s3}${goto 400}Gost${goto 460}: \
-${if_match "${exec echo -n `systemctl is-active gost`}" == "active"}\
-    ${color green}active${color white}\
-$else\
-    ${color red}not active${color red}\
-$endif\
-
-${color1}${goto 700}${voffset -940}${font JetBrainsMono Nerd Font:size=18}${exec echo -e '\ufd31 '}${font} ${voffset -4} Kubernetes Integration» ${color}
+${color1}${goto 700}${voffset -940}${font JetBrainsMono Nerd Font:size=18}${exec echo -e '\ufd31 '}${font} ${voffset -4} Minikube» ${color}
 ${color1}${goto 700}${voffset +10}${execpi 30 $HOME/.config/conky/kube.sh "int" 200}
-
-
-${color1}${goto 2000}${voffset -471}${font JetBrainsMono Nerd Font:size=18}${exec echo -e '\ufd31 '}${font} ${voffset -4} Kubernetes Validation» ${color}
-${color1}${goto 240}${voffset +10}${execpi 30 $HOME/.config/conky/kube.sh "val" 1500}
 
 
 ${color1}${goto 700}${font JetBrainsMono Nerd Font:size=20}${exec echo -e '\uf308 '}${font}${voffset -4} Docker» ${color}
