--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -20,9 +20,6 @@ font pango:monospace 13
 #exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork -c 000000
 
 exec --no-startup-id i3-workscreen
-# NetworkManager is the most popular way to manage wireless networks on Linux,
-# and nm-applet is a desktop environment-independent system tray GUI for it.
-exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -32,7 +29,7 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ to
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 exec --no-startup-id volumeicon
 
-exec --no-startup-id pulseaudio -D 
+#exec --no-startup-id pulseaudio -D 
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -98,8 +95,8 @@ bindsym $mod+space focus mode_toggle
 # focus the parent container
 bindsym $mod+q focus parent
 
-# focus the child container
-#bindsym $mod+d focus child
+## Moving workspaces between screens 
+bindsym $mod+p move workspace to output right
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -208,8 +205,7 @@ bindsym $mod+Ctrl+Right workspace next
 bindsym $mod+Ctrl+Left workspace prev
 
 # Polybar launch script
-exec_always --no-startup-id $HOME/scripts/spotify/launchlistener.sh
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+exec_always --no-startup-id $HOME/.config/polybar/launch
 
 # Make the currently focused window a scratchpad
 bindsym $mod+Shift+minus move scratchpad
@@ -235,4 +231,4 @@ for_window [class="Conky"] floating enable
 exec_always --no-startup-id $HOME/.config/i3/scripts/i3-cycle-focus.py --history 2
 bindsym $mod1+Tab exec --no-startup-id i3-cycle-focus.py --switch
 
-exec --no-startup-id /usr/bin/conky -c $HOME/.config/conky/conky.conf
+# exec --no-startup-id /usr/bin/conky -c $HOME/.config/conky/conky.conf
